--- a/index.css
+++ b/index.css
@@ -2,8 +2,57 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: 'Montserrat', sans-serif;
 }
 
+body {
+	background-color: #112D4E;
+} 
+
+nav > div {
+	background-color: black;
+}
+
+nav > div > p {
+	color: #F9F7F7;
+}
+#landing {
+	width: 100%;
+	background: linear-gradient(0deg, rgba(17,45,78,1) 4%, rgba(17,45,78,0.12088585434173671) 37%, rgba(17,45,78,0) 100%), url('./images/earth.jpg');
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	color: #F9F7F7;
+}
+
+#projects {
+	width: 100%;
+	background: linear-gradient(to bottom, #112D4E, #3F72AF); 
+	color: #F9F7F7;
+}
+
+#tools {
+	width: 100%;
+	background: #3F72AF;
+}
+
+.img_property {
+	border: 0.25rem solid #3F72AF;
+	/* height: 50% */
+}
+
+/* #projects {
+	height: 100vh;
+} */
+
+
+
+/* .profile_pic {
+	width: 50%;
+	align-self: center;
+} */
+
+/* Profilepic fadein and fade out */
 
 /* ANimation from right side */
 /* img {
