--- a/index.css
+++ b/index.css
@@ -9,6 +9,18 @@ body {
 	background-color: #112D4E;
 } 
 
+h1 {
+	letter-spacing: 4px;
+}
+
+h2 {
+	letter-spacing: 2px;
+}
+
+.about_me {
+	word-spacing: 3px;
+	line-height: 2rem;
+}
 .navbar_custom {
 	background-color: black !important;
 }
@@ -17,7 +29,7 @@ body {
 	color: #F9F7F7;
 }
 
-.navbar_custom .navbar-toggler-icon, .anchor_bkg {
+.navbar_custom .navbar-toggler-icon {
 	background-color: #3F72AF; /* White color for the toggler icon */
 }
 
