--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ h2 {
 
 #landing {
 	height: 100vh;
-	background: linear-gradient(0deg, rgba(17,45,78,1) 4%, rgba(17,45,78,0.12088585434173671) 37%, rgba(17,45,78,0) 100%);
+	/* background: linear-gradient(0deg, rgba(17,45,78,1) 4%, rgba(17,45,78,0.12088585434173671) 37%, rgba(17,45,78,0) 100%); */
 }
 
 #projects {
