--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,60 @@ body {
   padding: 20px;
   text-align: center;
 }
+
+.slideShow1, .slideShow2 {
+  display: none;
+}
+
+.mainProjectImage {
+  display: block;
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+.logos {
+  overflow: hidden;
+  white-space: nowrap;
+  position: relative;
+}
+
+.logos:before, .logos:after{
+  position: absolute;
+  top: 0;
+  width: 300px;
+  height: 100%;
+  content: "";
+  z-index: 2;
+}
+
+.logos::before {
+  left: 0;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0), #000000);
+}
+
+.logos::after {
+  right: 0;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), #000000);
+}
+
+.logos:hover .logos-slide {
+  animation-play-state: paused;
+}
+
+.logos-slide {
+  display: inline-block;
+  animation: 30s slide infinite linear;
+}
+
+.logos-slide img {
+  height: 150px;
+  width: 150px;
+  margin: 10px;
+}
